Sidebar fixed and put towards the side, spacing fixed with the header, description variable added

--- a/calendarui/src/App.css
+++ b/calendarui/src/App.css
@@ -16,7 +16,9 @@
     outline-offset: 2px;
   }
 }
-
+.belowHeader {
+    margin-top: 20px;
+}
 .hero {
   position: relative;
 
